Forced margin-bottom for person-picture-wrap to override bootstrap styles at small sizes; added media query for UCF header to help prevent page stretch at small sizes

--- a/style.css
+++ b/style.css
@@ -34,6 +34,12 @@ select#UCFHBHeaderLinks {
 	padding: 0;
 }
 
+@media (max-width: 979px) {
+	#UCFHBSearch_and_links { display: none; }
+	#UCFHBHeader div.UCFHBWrapper { width: 100%; }
+}
+
+
 /*/ Global Styles /*/
 #UCFHBHeader * {height:auto;}
 
@@ -117,4 +123,4 @@ select#UCFHBHeaderLinks {
 .news .item a{font-weight: normal; text-decoration: none; color: #333;}
 .news .item a:hover{text-decoration: underline; color: #ed1c24;}
 
-.person-picture-wrap { margin-bottom: 20px; }
+.person-picture-wrap { margin-bottom: 20px !important; }
